# anyapp

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
plans/: README.md
plans/archive/: 2026-07-23-visual-calming.md
plans/archive/2026-07-22-workbench-ui-rebuild/: 00-overview.md  01-component-foundation-and-theme.md  02-shell-and-library-information-architecture.md  03-overlays-settings-and-feedback.md  04-validation-acceptance-and-rollback.md  09-implementation-report.md
src/: App.css  App.tsx  index.css  main.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs  migration.rs  model.rs  repository.rs  scanner.rs  windows_ops.rs
src/components/: AppEditorDialog.tsx  AppIcon.tsx  CategoryDialog.tsx  ConfirmDialog.tsx  DataToolsDialog.tsx  RecoveryScreen.tsx  ScanDialog.tsx  UsageGuideDialog.tsx
src/components/ui/: alert-dialog.tsx  badge.tsx  button.tsx  dialog.tsx  dropdown-menu.test.tsx  dropdown-menu.tsx  field.tsx  input.tsx  select.tsx  separator.tsx  sheet.tsx  sonner.tsx  spinner.tsx  status-dot.tsx  switch.tsx  tabs.tsx  textarea.tsx  tooltip.tsx
src/components/workbench/: AnyAppShell.tsx  AppList.tsx  AppRow.tsx  FilterRail.tsx  LibraryControls.tsx  LibraryToolbar.tsx  SettingsBlock.tsx
src/hooks/: use-anyapp.ts
src/lib/: app-view.test.ts  app-view.ts  filter.test.ts  filter.ts  tauri-client.ts  utils.ts
src/stores/: ui-store.ts
src/styles/: anyapp.css
