[package]
name = "anyapp"
version = "0.1.0"
description = "Offline-first portable Windows application launcher"
authors = ["zker67"]
license = "MIT"
edition = "2021"
rust-version = "1.85"
autobins = false
default-run = "AnyApp"

[[bin]]
name = "AnyApp"
path = "src/main.rs"

[lib]
name = "anyapp_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2.11.3", features = [] }
tauri-plugin-dialog = "2.7.2"
tauri-plugin-log = "2"
thiserror = "2"
url = "2"
uuid = { version = "1", features = ["v4", "v5", "serde"] }
walkdir = "2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = ["Win32_Storage_FileSystem"] }

[dev-dependencies]
tempfile = "3"
